--- a/build.gradle
+++ b/build.gradle
@@ -63,20 +63,26 @@ def env = System.getenv()
 publishing {
     publications {
         mavenJava(MavenPublication) {
-        }
-
-        repositories {
-            if (env.MAVEN_URL) {
-                maven {
-                    credentials {
-                        username env.MAVEN_USERNAME
-                        password env.MAVEN_PASSWORD
-                    }
-                    url env.MAVEN_URL
-                }
-            } else {
-                mavenLocal()
+            artifact(remapJar) {
+                builtBy remapJar
             }
+            artifact(sourcesJar) {
+                builtBy remapSourcesJar
+            }
+        }
+    }
+
+    repositories {
+        if (env.MAVEN_URL) {
+            maven {
+                credentials {
+                    username env.MAVEN_USERNAME
+                    password env.MAVEN_PASSWORD
+                }
+                url env.MAVEN_URL
+            }
+        } else {
+            mavenLocal()
         }
     }
 }
